2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	* src/Makefile.am:
	* src/gstttmlblur.c: (gst_ttml_blur_create_gaussian_kernel),
	(gst_ttml_blur_image_surface):
	* src/gstttmlblur.h:
	* src/gstttmlrender.c: (gst_ttmlrender_render_outline),
	(gst_ttmlrender_show_regions):
	* win32/vs10/libgstfluttml_sdk.vcxproj:
	* win32/vs10/libgstfluttml_sdk.vcxproj.filters:
	Support for blurred outline. This is a direct implementation without any
	optimization. Blur kernels are calculated every time, which might be cached.
	Also, a simple downscale+upscale will be much faster. This one, however,
  looks super cool.

2014-05-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_color_expression),
	(gst_ttml_attribute_normalize_length), (gst_ttml_attribute_parse):
	* src/gstttmlattribute.h:
	* src/gstttmlbase.c: (gst_ttmlbase_sax2_element_start_ns):
	* src/gstttmlrender.c: (gst_ttmlrender_new_region):
	Allow outline thickness to be specified in relative units.

2014-05-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_new_region):
	Fix writing to the main (default) region when other regions are
	defined.

2014-05-13  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_regions):
	* src/gstttmlstyle.c: (gst_ttml_style_translate_generic_font_name),
	(gst_ttml_style_gen_pango_markup):
	Add some FIXME comments.

2014-05-13  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c: (gst_ttml_style_translate_generic_font_name),
	(gst_ttml_style_gen_pango_markup):
	Skeleton for remapping generic TTML font names into actual system
	fonts. For now, it simply removes the "default" tag, so we avoid a
	lot of Pango-WARNINGs in the most usual scenario.

2014-05-13  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation):
	Fix caps nego in 0.10 when there are no compatible caps.

2014-05-13  Xavi Artigas  <xartigas@fluendo.com>
